<resources>
    <string name="app_name" translatable="false">Conference_Infinity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="preference">Preference</string>
    <string name="history_conference">History Conference</string>
    <string name="logout">Logout</string>
    <string name="about">About</string>
    <string name="account_management">Account Management</string>
    <string name="account_fragment">Account Fragment</string>
    <string name="user_name">User Name</string>
    <string name="user_nickname">User Nickname</string>
    <string name="BackButton">Back Page</string>
    <string name="density">Density</string>
    <string name="prefer_language">Prefer Language</string>
    <string name="theme">Theme</string>
    <string name="enter_your_email">Enter your Email</string>
    <string name="email_sample" translatable="false">xxx@gmail.com</string>
    <string name="next">Next</string>
    <string name="let_s_start" translatable="false">Let\'s Start</string>
    <string name="welcome_conference_infinity">Welcome Conference Infinity</string>
    <string name="login">Login</string>
    <string name="login_by_mail">Login by Mail</string>
    <string name="nickname">NickName</string>
    <string name="enter_your_name_this_will_be_display_on_our_forum">Enter Nickname \n(Name will be display on forum)</string>
    <string name="phone_login">Phone Login</string>
    <string name="register">Register</string>
    <string name="select_your_preference_article_density">Select your preference Article Density</string>
    <string name="article_density">Article Density</string>
    <string name="all_done">All Done !</string>
    <string name="welcome_pic">Welcome Pic</string>
    <string name="you_will_be_accepted_our_terms_of_service_after_you_continue" translatable="false">You will be accepted our Terms of Service after you continue.</string>
    <string name="meet_conference_infinity">Meet Conference Infinity</string>
    <string name="select_preference_language">Select Preference Language</string>
    <string name="traditional_chinese">Traditional Chinese(ZH-TW)</string>
    <string name="english_us" translatable="false">English (US)</string>
    <string name="_6_to_24_characters">(6 to 24 characters)</string>
    <string name="enter_your_password">Enter your Password</string>
    <string name="select_preference_theme">Select Preference Theme</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="select_following_topics">Select Following Topics</string>
    <string name="topics">Topics</string>
    <string name="conference_infinity" translatable="false">Conference Infinity</string>
    <string name="topics_icon" translatable="false">Topics Icon</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="welcome">Welcome</string>
    <string name="sign_in">Sign in</string>
    <string name="power_by_wikicfp" translatable="false">Power by WikiCFP</string>
    <string name="seperate_line" translatable="false">Separate Line</string>
    <string name="or" translatable="false">OR</string>
    <string name="don_t_have_an_account_signup">Don\'t have an account? SIGNUP</string>

    <string name="Category">Category</string>
    <string name="Conference">Conference</string>
    <string name="Bookmark_Topics" translatable="false">Bookmark Topics</string>
    <string name="All_Topics">All Topics</string>

    <string name="Paper_Deadline">Paper Deadline : </string>
    <string name="add">Join Conference</string>
    <string name="translate">Translate</string>
    <string name="comments">Comments</string>
    <string name="share">Share</string>
    <string name="conference_name">Conference Name</string>
    <string name="conference_date">Conference Date</string>
    <string name="conference_location">Conference Location</string>
    <string name="bookmarked">Bookmarked</string>
    <string name="topic_icon" translatable="false">Topic_Icon</string>
    <string name="test" translatable="false">test</string>
    <string name="comments_icon" translatable="false">Comments_Icon</string>
    <string name="trend">Trend</string>
    <string name="latest">Latest</string>
    <string name="following">Following</string>
    <string name="upload_head_photo">Upload Head Photo</string>
    <string name="add_things">Add Things</string>
    <string name="prepare_things">Prepare Things</string>
    <string name="reminder_alert">Reminder Alert</string>
    <string name="pending_conference">Pending Conference</string>
    <string name="image_preview">Image Preview</string>
    <string name="pick_a_photo">Pick a photo</string>
    <string name="no_pending_conference">No Pending Conference</string>
    <string name="content">Content</string>
    <string name="discuss">Discuss</string>
    <string name="location">Location</string>
    <string name="home">Home</string>
    <string name="account">Account</string>
    <string name="attended">Attended</string>
    <string name="discuss_send">Discuss Send</string>
    <string name="something_to_say">Something to say…</string>
    <string name="theme_demo" translatable="false">Theme Demo</string>
    <string name="please_select_a_theme">Please Select a Theme</string>
    <string name="settings_will_be_save_in_firebase">Settings will be save in Firebase</string>
    <string name="guest_login">Guest Login</string>
    <string name="abstract_registration_due">" - Abstract Registration Due"</string>
    <string name="submit_deadline">" - Submission Deadline"</string>
    <string name="notification_due">" - Notification Due"</string>
    <string name="final_version_due">" - Final Version Due"</string>
    <string name="pending_submit_deadline">Submit Deadline :</string>

</resources>