<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingHorizontal="15sp"
    android:paddingVertical="15sp">

    <TextView
        android:id="@+id/conference_item_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:maxLines="2"
        android:paddingVertical="5dp"
        android:singleLine="false"
        android:text="@string/topics"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textColor="@color/dark_gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5sp"
            android:gravity="center_vertical"
            android:text="@string/Paper_Deadline"
            android:textSize="10sp"
            tools:ignore="SmallSp" />

        <TextView
            android:id="@+id/conference_item_deadline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:maxLines="2"
            android:paddingVertical="5sp"
            android:singleLine="false"
            android:text="@string/test"
            android:textSize="10sp"
            tools:ignore="SmallSp" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/conference_bookmark"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:contentDescription="@string/bookmarked"
                android:scaleType="centerInside"
                android:src="@drawable/ic_bookmark_off" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>