<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PreferenceActivity"
    android:orientation="vertical"
    android:weightSum="6">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_marginTop="24sp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="4">

        <ImageView
            android:id="@+id/backBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/BackButton"
            android:paddingStart="24sp"
            android:paddingEnd="24sp"
            android:src="@drawable/ic_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/preference"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:paddingStart="20sp"
            android:paddingEnd="20sp"
            android:textColor="@color/dark_gray"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/light_gray"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_margin="30sp"
        android:layout_weight="3"
        android:orientation="vertical">

        <Button
            android:id="@+id/theme_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30sp"
            android:layout_marginVertical="10sp"
            android:background="@color/white"
            android:text="@string/theme"
            android:textAllCaps="false"
            android:textColor="@color/dark_gray"
            app:icon="@drawable/ic_theme"
            app:iconPadding="20sp" />

        <Button
            android:id="@+id/prefer_language_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30sp"
            android:layout_marginVertical="10sp"
            android:background="@color/white"
            android:text="@string/prefer_language"
            android:textAllCaps="false"
            android:textColor="@color/dark_gray"
            app:icon="@drawable/ic_language"
            app:iconPadding="20sp" />

        <Button
            android:id="@+id/density_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30sp"
            android:layout_marginVertical="10sp"
            android:background="@color/white"
            android:text="@string/density"
            android:textAllCaps="false"
            android:textColor="@color/dark_gray"
            app:icon="@drawable/ic_density"
            app:iconPadding="20sp" />


    </LinearLayout>

</LinearLayout>