<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="3">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_gravity="bottom"
        android:layout_marginHorizontal="20sp"
        android:layout_marginTop="50sp"
        android:layout_marginBottom="20sp"
        android:layout_weight="1"
        android:orientation="vertical"
        tools:ignore="Suspicious0dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20sp"
            android:paddingStart="20sp"
            android:paddingEnd="0sp"
            android:text="@string/welcome_conference_infinity"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:textColor="@color/light_gray" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20sp"
            android:paddingStart="20sp"
            android:paddingEnd="0sp"
            android:shadowColor="@color/black"
            android:shadowDx="3"
            android:shadowDy="10"
            android:shadowRadius="6"
            android:text="@string/all_done"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="@color/dark_gray"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_marginStart="40sp"
        android:layout_marginEnd="40sp"
        android:layout_weight="1"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20sp"
            android:contentDescription="@string/welcome_pic"
            android:src="@drawable/ic_register_done" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_margin="40sp"
        android:layout_weight="1"
        android:gravity="bottom"
        android:orientation="vertical">

        <TextView
            android:id="@+id/show_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20sp"
            android:layout_marginEnd="20sp"
            android:layout_marginBottom="30sp"
            android:gravity="center"
            android:text="@string/you_will_be_accepted_our_terms_of_service_after_you_continue"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:textColor="@color/light_gray" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/done_next_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@drawable/custom_register_finish_btn"
            android:padding="10sp"
            android:text="@string/meet_conference_infinity" />

    </LinearLayout>

</LinearLayout>