<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="5">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_margin="20sp"
        android:layout_weight="2"
        android:orientation="vertical"
        tools:ignore="Suspicious0dp">

        <at.markushi.ui.CircleButton
            android:id="@+id/language_back_btn"
            android:layout_width="72sp"
            android:layout_height="72sp"
            android:src="@drawable/ic_back"
            app:cb_color="@color/light_selected_gray"
            app:cb_pressedRingWidth="0sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40sp"
            android:paddingStart="40sp"
            android:paddingEnd="0sp"
            android:text="@string/welcome_conference_infinity"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:textColor="@color/light_gray" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20sp"
            android:elevation="50sp"
            android:fontFamily="monospace"
            android:paddingStart="20sp"
            android:paddingEnd="0sp"
            android:shadowColor="@color/dark_gray"
            android:shadowDx="5"
            android:shadowDy="7"
            android:shadowRadius="10"
            android:text="@string/preference"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/dark_gray"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_marginStart="40sp"
        android:layout_marginEnd="40sp"
        android:layout_weight="2"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20sp"
            android:layout_marginEnd="20sp"
            android:layout_marginBottom="10sp"
            android:text="@string/select_preference_language"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:textColor="@color/light_gray" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/input_language_zh_tw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:drawableStart="@drawable/ic_zh_tw"
            android:drawablePadding="12sp"
            android:paddingStart="12sp"
            android:paddingTop="5sp"
            android:paddingEnd="12sp"
            android:paddingBottom="5sp"
            android:text="@string/traditional_chinese"
            android:textAllCaps="false"
            android:textColor="@color/dark_gray"
            android:textSize="14sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/light_gray" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/input_language_en_us"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:drawableStart="@drawable/ic_en_us"
            android:drawablePadding="12sp"
            android:paddingStart="12sp"
            android:paddingTop="5sp"
            android:paddingEnd="12sp"
            android:paddingBottom="5sp"
            android:text="@string/english_us"
            android:textAllCaps="false"
            android:textColor="@color/dark_gray"
            android:textSize="14sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_margin="40sp"
        android:layout_weight="1">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/language_next_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@drawable/custom_register_btn"
            android:padding="10sp"
            android:text="@string/next" />

    </LinearLayout>

</LinearLayout>