<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="5">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_margin="20sp"
        android:layout_weight="2"
        android:orientation="vertical"
        tools:ignore="Suspicious0dp">

        <at.markushi.ui.CircleButton
            android:id="@+id/density_back_btn"
            android:layout_width="72sp"
            android:layout_height="72sp"
            android:src="@drawable/ic_back"
            app:cb_color="@color/light_selected_gray"
            app:cb_pressedRingWidth="0sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20sp"
            android:layout_marginTop="40sp"
            android:paddingStart="20sp"
            android:paddingEnd="0sp"
            android:text="@string/welcome_conference_infinity"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:textColor="@color/light_gray" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20sp"
            android:elevation="50sp"
            android:fontFamily="monospace"
            android:paddingStart="20sp"
            android:paddingEnd="0sp"
            android:shadowColor="@color/dark_gray"
            android:shadowDx="5"
            android:shadowDy="7"
            android:shadowRadius="10"
            android:text="@string/upload_head_photo"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/dark_gray"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_marginStart="40sp"
        android:layout_marginEnd="40sp"
        android:layout_weight="2"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20sp"
            android:layout_marginEnd="20sp"
            android:layout_marginBottom="10sp"
            android:text="@string/image_preview"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:textColor="@color/light_gray" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/register_head_img"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/ic_headphoto_default"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_margin="40sp"
        android:layout_weight="1"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/density_next_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@drawable/custom_register_btn"
            android:padding="10sp"
            android:text="@string/next" />

    </LinearLayout>

</LinearLayout>