<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="3"
    tools:context=".Fragment_Home_Account">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_marginTop="40sp"
        android:layout_weight="1"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="96sp"
            android:layout_height="96sp"
            android:layout_gravity="center"
            app:civ_border_color="@color/dark_gray"
            app:civ_border_width="2sp" />

        <TextView
            android:id="@+id/user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginVertical="20sp"
            android:text="@string/user_name"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

        <LinearLayout
            android:id="@+id/load_Img"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingStart="28dp"
            android:paddingEnd="0dp"
            android:visibility="visible">

            <ProgressBar
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="center" />
        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/light_gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_marginTop="20sp"
        android:layout_weight="2"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/preference_btn"
            style="@style/PageTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30sp"
            android:background="@android:color/transparent"
            android:drawableStart="@drawable/ic_preference"
            android:drawablePadding="24sp"
            android:paddingVertical="20sp"
            android:text="@string/preference"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/logout_btn"
            style="@style/PageTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30sp"
            android:background="@android:color/transparent"
            android:drawableStart="@drawable/ic_logout"
            android:drawablePadding="24sp"
            android:paddingVertical="20sp"
            android:text="@string/logout"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/about_btn"
            style="@style/PageTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30sp"
            android:background="@android:color/transparent"
            android:drawableStart="@drawable/ic_about"
            android:drawablePadding="24sp"
            android:paddingVertical="20sp"
            android:text="@string/about"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    </LinearLayout>

</LinearLayout>